monitoring using prometheus & grafana